--- a/inst/doc/krsp.rmd
+++ b/inst/doc/krsp.rmd
@@ -32,7 +32,6 @@ Functions fall into two categories: standard database queries and helper functio
 Here's a brief demonstration of how these verbs work.
 
 ```{r st-verbs}
-#install.packages("dplyr")
 library(dplyr)
 mtc <- tbl_df(mtcars)
 mtc <- select(mtc, mpg, cyl, horse_power = hp)
@@ -43,7 +42,7 @@ mutate(mtc, mpg_per_hp = mpg / horse_power)
 summarize(mtc, mean_mpg = mean(mpg), num_records = n())
 ```
 
-Note that in all cases the first arguement is a data frame, the subsequent arguements describe what you want to do with the data frame, and the result is always another data frame. Also, columns in the data frame are referenced directly without quotes.
+Note that in all cases the first arguement is a data frame, the subsequent arguements describe what you want to do with the data frame, and the result is always another data frame. Also, columns in the data frame can be referenced directly without quotes.
 
 ## Chaining operations with `%>%`
 
@@ -76,23 +75,79 @@ mtc %>%
   summarise(mean_mpg = mean(mpg))
 ```
 
-## Working with databases
+## Joining tables
+
+Often you'll have data spread across multiple data frames and you'll want to join those data frames together based on some common variable (called a key). `dplyr` provides a series of functions to combine tables together, they vary according to what happens if values of the key appear in one table, but not the other:
+
+- `inner_join(x, y)`: return all rows from `x` where there are matching values in `y`.
+- `left_join(x, y)`: return all rows from `x`, regardless of whether or not there are matching values in `y`. Rows in `x` with no match in `y` will have `NA` values in the new columns.
+- `right_join(x, y)`: return all rows from `y`, regardless of whether or not there are matching values in `x`. Rows in `y` with no match in `x` will have `NA` values in the new columns.
+- `full_join(x, y)`: return all rows from `x` and `y`.
+
+Here's a few simple examples taken from the [UBC STAT545 website](http://stat545.com/bit001_dplyr-cheatsheet.html). First I create a couple simple tables to work with:
+
+```{r join-tables}
+superheroes <- data.frame(
+  name = c("Magneto", "Storm", "Mystique", "Batman", 
+           "Joker", "Catwoman", "Hellboy"),
+  alignment = c("bad", "good", "bad", "good",
+                "bad", "bad", "good"),
+  publisher = c("Marvel", "Marvel", "Marvel", "DC", 
+                "DC", "DC", "Dark Horse Comics"),
+  stringsAsFactors = FALSE
+  )
+superheroes
+
+publishers <- data.frame(
+  publisher = c("DC", "Marvel", "Image"),
+  yr_founded = c(1934, 1939, 1992),
+  stringsAsFactors = FALSE
+  )
+publishers
+```
+
+Now I join them:
+
+```{r joins}
+# Hellboy (superhero) and Image (publisher) are lost
+inner_join(superheroes, publishers)
+# Hellboy (superhero) has no yr_founded and Image (publisher) is lost
+left_join(superheroes, publishers)
+# Hellboy (superhero) is lost and Image (publisher) has no superheros
+right_join(superheroes, publishers)
+```
+
+Note that in the above examples, the join variable (i.e. the key) is inferred as the only variable in common between the tables: `publisher`. This can be made explicit with:
+
+```{r explicit-join}
+inner_join(superheroes, publishers, by = "publisher")
+```
+
+Or, if the tables use different names for the key variable:
+
+```{r diff-join}
+publishers <- rename(publishers, pub = publisher)
+inner_join(superheroes, publishers, by = c("publisher" = "pub"))
+```
+
+# Working with the KRSP database
 
 The functions within `dplyr` are usually applied to data frames; however, they can be applied to tables within a SQL database in almost exactly the same way. The only additional steps are to define a connection to the database (i.e. specify where the database is and your login credentials), a process addresssed in the next section. Under the hood, `dplyr` converts function calls to SQL code, but this process is invisible to the user.
 
-One nice feature of `dplyr` is that it tries to be as "lazy" as possible when dealing with databases. This means:
+For reference, the KRSP database has the following primary tables:
 
-- Data are never pulled from the database unless explicitly asked for, e.g. passed to a function outside `dplyr`.
-- The database is only queried at the last minute possible, `dplyr` keeps track of all the intermediate operations and only converts them to SQL and queries the database when results are explicitly requested.
-- Only the number of rows explicitly needed are pulled from the database.
+- `squirrel`: each squirrel gets a unique record in this table.
+- `trapping`: each record corresponds to a trapping event. Join to `squirrel` by `squirrel_id`.
+- `bevahiour`: each record corresponds to a behaviour observation. Join to `squirrel` by `squirrel_id`.
+- `litter`: each record corresponds to a litter for a given female. Join to `squirrel` by `squirrel_id` to find mother.
+- `juvenile`: each record corresponds to a juvenile squirrel within a given litter. Join to `squirrel` by `squirrel_id` to find juvenile, and to `litter` by `litter_id`.
+- `census`: the squirrel census is stored in this table, one record per squirrel at each census. Join to `squirrel` by `squirrel_id`.
 
-This is nice because it means queries to the database and downloading data are kept to an absolute minimum. While `dplyr` documentation calls this behaviour "lazy", I'm inclined to just call it "smart".
-
-# Connecting to the KRSP database
+## Connecting to the database
 
 Before accessing tables in a MySQL database you need to create a connection object that defines the location and authentication details for the connection. The function `krsp_connect()` is designed to create this connection object, which you will then pass as a parameter to other functions in this package. I outline three different ways of connecting to the KRSP database for three common scenarios.
 
-## Local instance
+### Local instance
 
 The simplest situation is if you have a local copy of the database that you connect to with username `root` and no password. This is the default for `krsp_connect()` so creating a connection object is as simple as:
 
@@ -101,7 +156,7 @@ library(krsp)
 con <- krsp_connect()
 ```
 
-## Remote instance
+### Remote instance
 
 Things get a little more complicated if you want to connect to a remote KRSP database. 
 This could either be a cloud database hosted by Amazon Web Services (AWS) or a database on a computer on your local network, which would be the setup at Squirrel Camp. In either case, you'll need to configure the database correctly so it accepts connections, and set up users, passwords, and privileges. Before you proceed, you'll need the following pieces of information:
@@ -112,7 +167,7 @@ This could either be a cloud database hosted by Amazon Web Services (AWS) or a d
 
 With this information there are two ways to connect: the quick/wrong way and the correct/secure way.
 
-### The quick/wrong way
+#### The quick/wrong way
 
 The easiest way to quickly connect to a remote database is to pass all the connection and authentication details directly to `krsp_connect()` as parameters. This is usually a terrible idea because your username and password will be stored in plain text and, in the long run, it will be more work because you'll have to type all the details in each time you connect. Here's how you do it:
 
@@ -132,7 +187,7 @@ con <- krsp_connect(host = "192.168.0.1", user = "squirreler")
 
 where `192.168.0.1` should be replaced with the IP address on the local network of the camp computer with the database.
 
-### The correct/secure way
+#### The correct/secure way
 
 The right way to connect to a remote database, especially in the cloud on AWS, is to specify the connection information in a `my.cnf` connection file. This is a file that MySQL references to retrieve the location of the database and your credentials. This avoids having to store sensitive information, such as your password, within your R code.
 
@@ -160,3 +215,111 @@ To create a connection object provide the name of the `my.cnf` profile to the `g
 ```r
 con <- krsp_connect(group = "krsp-aws")
 ```
+
+## Querying the database
+
+Once you have created a connection to the database you can reference a table by name with `tbl()` command as follows:
+
+```{r tbl}
+library(krsp)
+con <- krsp_connect()
+(trapping <- tbl(con, "trapping"))
+```
+
+Now you can treat the table just like a data frame! Let's say we want to know which squirrels are really fat (over 500 grams).
+
+```{r fat}
+trapping %>% 
+  filter(scale_weight > 500) %>% 
+  select(squirrel_id, tagLft, tagRt, scale_weight) %>% 
+  arrange(scale_weight)
+```
+
+Or, how about a multi-table query. Let's figure out the average litter size for each grid:
+
+```{r}
+litter <- tbl(con, "litter")
+juvenile <- tbl(con, "juvenile")
+litter_size <- inner_join(litter, juvenile, by = c("id" = "litter_id")) %>% 
+  group_by(grid, litter_id) %>% 
+  # count() counts the number of records within each group, stores as variable n
+  count() %>% 
+  summarize(mean_size = mean(n)) %>% 
+  arrange(mean_size)
+collect(litter_size)
+```
+
+Looks like JO is the winner.
+
+# Potential issues (**Important!**)
+
+`dplyr` is a great tool for working with the KRSP database directly in R. However, there are some aspects of `dplyr` that can lead to errors when working with SQL databases. Some of these errors and bugs can be quite subtle if you're not aware of what to look for. Read this section thoroughly to avoid these issues.
+
+## Laziness
+
+One important feature of `dplyr` is that it tries to be as "lazy" as possible when dealing with databases. `dplyr` code is translated behind the scenes into an SQL query and executed only when required. This means:
+
+- Data are never pulled from the database unless explicitly asked for, e.g. passed to a function outside `dplyr`.
+- The database is only queried at the last minute possible, `dplyr` keeps track of all the intermediate operations and only converts them to SQL and queries the database when results are explicitly requested.
+- Only the number of rows explicitly needed are pulled from the database.
+
+This is nice because it means queries are performed on the database side, which is typically faster than R. Furthermore, queries to the database and downloading data are kept to an absolute minimum. However, there is **one very important catch with lazy evaluation**: functions that don't have SQL equivalents will cause errors because they can't be translated. For example, I'll try to use the R function `quantile()` to get the third quartile of squirrel weights on JO.
+
+```{r error, error=TRUE}
+third <- trapping %>% 
+  filter(gr == "JO") %>% 
+  summarize(third = quantile(scale_weight, probs = 0.75, na.rm = TRUE))
+third
+```
+
+There are two important things to note here. First, using `quantile()` leads to an error because no equivalent function exists in SQL. Second, and more dangerous, note that the error only gets raised when the results are explicitily printed with the second line of code. The first line just constructs the query and doesn't actually run anything, so it doesn't discover that there's an error.
+
+To avoid these issues, use the function `collect()` to force `dplyr` to run a query and return the results as a data frame.
+
+```{r error-fixed}
+third <- trapping %>% 
+  filter(gr == "JO") %>% 
+  collect() %>% 
+  summarize(third = quantile(scale_weight, probs = 0.75, na.rm = TRUE))
+third
+```
+
+In general, it's best to do `filter()`ing, `select()`ing, and joining on the database side to take advantage of the improved speed, but use `collect()` before using any R specific functions in a `mutate()` or `summarize()` statement. If you're ever in doubt about whether a function has a SQL equivalent, just use it then call `collect()` immeditately after to force an error.
+
+```{r force-error, error=TRUE}
+# sd() has a SQL equivalent
+trapping %>% 
+  summarize(test = sd(scale_weight)) %>% 
+  collect()
+# but median() doesn't
+trapping %>% 
+  summarize(test = median(scale_weight)) %>% 
+  collect()
+```
+
+## Case sensitivity
+
+R is case sensistive, MySQL is not. The causes an issue because MySQL allows you to use mixed case when defining variables. For example, a variable can be called `LocX`, but referred to with `locx`, `LocX`, or `LOCX`. `dplyr` isn't so sloppy, if a variable is called `LocX` in the database, it must be referred to as `LocX`.
+
+To see this issue in action, note that the `dbaMidden` table uses `locX`, while the `census` table uses `locx`.
+
+```{r, error=TRUE}
+# fine
+tbl(con, "dbaMidden") %>% 
+  select(locX) %>% 
+  head
+# error
+tbl(con, "dbaMidden") %>% 
+  select(locx) %>% 
+  head
+# error
+tbl(con, "census") %>% 
+  select(locX) %>% 
+  head
+# fine
+tbl(con, "census") %>% 
+  select(locx) %>% 
+  head
+```
+
+To avoid this, just make sure you refer to variables with the correct case. Even better, only use lowercase when defining variables in the database.
